// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on tweet extended 1`] = `
"
  <img height=\\"16\\" width=\\"16\\" src=\\"http://example.com/profile.png\\">
  <b>Alice Liddell</b> (<a href=\\"https://twitter.com/alice\\">@alice</a>)<br>

  <p>
      \\"Drink Me\\"

    (<a href=\\"https://twitter.com/alice/status/TWEET_ID\\">link</a>)
  </p>

    <ul class=\\"list-inline\\">
        <li>
          <a href=\\"http://example.com/photo/1\\">
            <img src=\\"http://example.com/flecktarn/sr9FHUzSnLCFqNKFQF0XxTnt945OZ7T8QThH8A/http%3A%2F%2Fexample.com%2Fphoto%2F1.jpg\\" alt=\\"\\">
          </a>
        </li>
        <li>
          <a href=\\"http://example.com/video/1\\">
            <img src=\\"http://example.com/flecktarn/OrZAmsZyZb_39gAn4-NSiY24MerfSvK1ymIxIQ/http%3A%2F%2Fexample.com%2Fvideo-thumbnail%2F1.jpg\\" alt=\\"\\">
          </a>
        </li>
    </ul>"
`;

exports[`on tweet only entities 1`] = `
"
  <img height=\\"16\\" width=\\"16\\" src=\\"http://example.com/profile.png\\">
  <b>Alice Liddell</b> (<a href=\\"https://twitter.com/alice\\">@alice</a>)<br>

  <p>
      hello from the wonderland

    (<a href=\\"https://twitter.com/alice/status/TWEET_ID\\">link</a>)
  </p>

    <ul class=\\"list-inline\\">
        <li>
          <a href=\\"http://example.com/photo/1\\">
            <img src=\\"http://example.com/flecktarn/sr9FHUzSnLCFqNKFQF0XxTnt945OZ7T8QThH8A/http%3A%2F%2Fexample.com%2Fphoto%2F1.jpg\\" alt=\\"\\">
          </a>
        </li>
    </ul>"
`;

exports[`on tweet simple 1`] = `
"
  <img height=\\"16\\" width=\\"16\\" src=\\"http://example.com/profile.png\\">
  <b>Alice Liddell</b> (<a href=\\"https://twitter.com/alice\\">@alice</a>)<br>

  <p>
      hello from the wonderland

    (<a href=\\"https://twitter.com/alice/status/TWEET_ID\\">link</a>)
  </p>"
`;
